[[bin]]
name = "proxsd"
path = "src/main.rs"

[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
daemonize = "0.4"
tokio = { version = "1", features = ["rt", "macros", "net"] }
hyper = { version = "0.14", features = ["server"] }
hyperlocal = "0.8"
serde_json = "1.0"
